# media-toolbox

./: README.md
controller/: Cargo.toml  config.cfg
controller/src/: main.rs  sleep.rs
controller/src/util/: event.rs  mod.rs
peers_manager/: Cargo.toml  README.txt  TODO.txt  build.sh  kill_server.sh  run_db.sh  run_migrations.sh  run_srv.sh  test.db
peers_manager/migrations/2018-12-28-054101_create_users_table/: up.sql
peers_manager/src/: db.rs  main.rs  models.rs  schema.rs  users_db.rs
peers_manager/src/db/: users.rs
peers_manager/src/web/: app.rs  email_validator.rs  mod.rs  users.rs
peers_manager/src/web/users/: create.rs  handlers.rs  login.rs  mod.rs  search.rs  tests_tools.rs
