[package]
name = "controller"
version = "0.1.0"
authors = ["volodymyr.gorbenko"]
edition = "2018"

[dependencies]
indicatif = "0.11.0"
dialoguer = "0.3.0"
console = "0.7.2"
rand = "0.6.1"
futures = "0.1.25"
tokio-core = "0.1.17"
failure = "0.1.3"
termion = "1.5.1"
tui = "0.3.0"
unicode-width = "0.1.5"
rustyline = "3.0.0"
interactor = "0.1.1"