[package]
name = "peers_manager"
version = "0.1.0"
authors = ["Vladimir Gorbenko <gorbenko.vova@gmail.com>"]
#workspace = "../"

[dependencies]
env_logger = "0.6.0"

actix = "0.7"
actix-web = "0.7"

futures = "0.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

diesel = { version = "1.3.3", features = ["postgres", "r2d2"] }
r2d2 = "0.8"

enquote = "1.0.3"

[dev-dependencies]
mime = "0.3.12"